fixed color contrast

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -10,7 +10,6 @@ $breakpoints: (
 $color-blue: #2f3e81;
 $color-cerulean: #01add2;
 $color-turquoise: #3bd2da;
-$color-turquoise-medium: #4dd1db;
 
 $grey-050: #f6f6f6;
 $grey-100: #ededed;
